Update/migrate jquery ... maybe

--- a/index.xhtml
+++ b/index.xhtml
@@ -39,7 +39,8 @@
         color:#c00;
 	  }
     </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="scripts/jquery-migrate-1.4.1.min.js"></script>
     <script type="text/javascript" src="scripts/jquery.hotkeys.min.js"></script>
     <script type="text/javascript" src="scripts/numeric_value.min.js"></script>
     <script type="text/javascript" src="scripts/analyzer.min.js"></script>
