--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -11,7 +11,7 @@
       <dt>What happened to the old IEEE-754 “calculators” and reference material?</dt>
       <dd>
         <p>
-          <a href="../../IEEE-754.old">The previous version is still available.</a>
+          <a href="../IEEE-754.old">The previous version is still available.</a>
         </p>
         <p>
           But please note: the Reference Material there contains many broken links and is no longer
