Getting rid of unneeded php

--- a/IEEE-754.old/index.xhtml
+++ b/IEEE-754.old/index.xhtml
@@ -1,18 +1,4 @@
-<?php
-  date_default_timezone_set('America/New_York');
-  if (array_key_exists("HTTP_ACCEPT", $_SERVER) &&
-      stristr($_SERVER["HTTP_ACCEPT"], "application/xhtml+xml"))
-  {
-    header("Content-type: application/xhtml+xml");
-    print("<?xml version=\"1.0\" encoding=\"utf-8\"?>\n");
-  }
-  else
-  {
-    header("Content-type: text/html; charset=utf-8");
-  }
- ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
   <head>
@@ -35,7 +21,9 @@
           media="print"
           href="../courses/css/style-print.css"
     />
-
+    <script>
+        document.getElementById("last-modified").textContent = document.lastModified;
+    </script>
   </head>
 
   <body>
@@ -77,10 +65,8 @@
         <a href="http://jigsaw.w3.org/css-validator/check/referer">
         CSS</a>
       </p>
-      <p><em>Last updated
-        <?php echo date("Y-m-d", filemtime($_SERVER['SCRIPT_FILENAME']));
-        ?>.</em>
-      </p>
+      <p><em>Last updated <span id="last-modified"></span>
+      </em></p>
     </div>
   </body>
 </html>
