More cleanup html 5

--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html <?php echo $html_attributes;?>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
     <title>IEEE-754 Analyzers FAQ</title>
     <link rel="icon" href="../favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../css/faq.css" />
