Fix charset and lang

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html lang="en">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
   <head>
+    <meta charset="UTF-8">
     <title>IEEE-754 Analysers</title>
 
     <link rel="shortcut icon" href="favicon.ico" />
