--- a/faq.html
+++ b/faq.html
@@ -7,12 +7,21 @@
     <link rel="stylesheet" type="text/css" href="../css/faq.css" />
   </head>
   <body>
-    <h1>IEEE-754 Analyzers FAQ</h1>
+    <h1>IEEE-754 Analyzers: History and FAQ</h1>
     <dl>
+      <dt>Transition from babbage.cs.qc.cuny.edu to here.</dt>
+        <dd>
+          The “IEEE-754 Analyzers” and a previous “IEEE-754 Calculators” pages were developed while
+          I was a professor of computer science at Queens College of the City University of New
+          York. They were hosted on a workstation in my office, which was also used to support the
+          courses I was teaching, along with some side projects. I retired from Queens in 2020, and
+          in 2024 CUNY decided the workstation should be shut down. So I transferred the contents of
+          the course-related content, including these analyzers to my personal web server.
+        </dd>
       <dt>What happened to the old IEEE-754 “calculators” and reference material?</dt>
       <dd>
         <p>
-          <a href="../IEEE-754.old">The previous version is still available.</a>
+          <a href="IEEE-754.old">The previous version is still available.</a>
         </p>
         <p>
           But please note: the Reference Material there contains many broken links and is no longer
@@ -20,8 +29,8 @@
           information on the IEEE-754 floating point standard instead.
         </p>
         <p>
-          “Kevin’s Chart”
-          <a href="../../IEEE-754.old/References.xhtml#tables"> is still
+          “Kevin’s Charts”
+          <a href="IEEE-754.old/References.xhtml#tables"> is still
           there</a>, but has not been updated to handle the 2008 version of the IEEE-754 standard.
         </p>
       </dd>
