--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
           York. They were hosted on a workstation in my office, which was also used to support the
           courses I was teaching, along with some side projects. I retired from Queens in 2020, and
           in 2024 CUNY decided the workstation should be shut down. So I transferred the contents of
-          the course-related content, including these analyzers to my personal web server.
+          the course-related content, including these analyzers to my personal web server here.
         </dd>
       <dt>What happened to the old IEEE-754 “calculators” and reference material?</dt>
       <dd>
@@ -30,7 +30,7 @@
         </p>
         <p>
           “Kevin’s Charts”
-          <a href="IEEE-754.old/References.xhtml#tables"> is still
+          <a href="IEEE-754.old/References.html#tables"> is still
           there</a>, but has not been updated to handle the 2008 version of the IEEE-754 standard.
         </p>
       </dd>
