--- a/IEEE-754.old/References.html
+++ b/IEEE-754.old/References.html
@@ -63,7 +63,7 @@
       </p>
       <p>
         The “calculators” referenced on this page have been replaced by an “analyzer” at <a
-        href="../IEEE-754/index.html">IEEE-754</a>.</p>
+        href="../index.html">IEEE-754</a>.</p>
     </div>
     <h2>
       Old Contents
