--- a/faq.html
+++ b/faq.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>IEEE-754 Analyzers FAQ</title>
-    <link rel="icon" href="../favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="../css/faq.css" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="./css/faq.css" />
   </head>
   <body>
     <h1>IEEE-754 Analyzers: History and FAQ</h1>
@@ -225,7 +225,7 @@
         </p>
       </dd>
     </dl>
-    <div id='nav'><a href="../index.php">Back to the Analyzers</a></div>
+    <div id='nav'><a href="index.html">Back to the Analyzers</a></div>
   </body>
 </html>
 
