--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
           York. They were hosted on a workstation in my office, which was also used to support the
           courses I was teaching, along with some side projects. I retired from Queens in 2020, and
           in 2024 CUNY decided the workstation should be shut down. So I transferred the contents of
-          the course-related content, including these analyzers, to my personal web server here.
+          the course-related content, including these analyzers, to my personal web site here.
           </p>
         </dd>
       <dt>What happened to the old IEEE-754 “calculators” and reference material?</dt>
