Add link to Ciechanowski’s f-p visualizer.

--- a/faq.html
+++ b/faq.html
@@ -20,6 +20,12 @@
           the course-related content, including these analyzers, to my personal web site here.
           </p>
         </dd>
+      <dt>Float Exposed</dt>
+      <dd><p>While not specific to the IEEE-754 standard, Bartosz Ciechanowski has developed an
+        extremely well-done tool for visualizing floating-point number encoding. I recommend it
+        most highly: <a href="https://ciechanow.ski/exposing-floating-point/">
+          https://ciechanow.ski/exposing-floating-point/</a>.</p>
+      </dd>
       <dt>What happened to the old IEEE-754 “calculators” and reference material?</dt>
       <dd>
         <p>
