Add more info about Ciechanowski’s work.

--- a/faq.html
+++ b/faq.html
@@ -21,10 +21,18 @@
           </p>
         </dd>
       <dt>Float Exposed</dt>
-      <dd><p>While not specific to the IEEE-754 standard, Bartosz Ciechanowski has developed an
-        extremely well-done tool for visualizing floating-point number encoding. I recommend it
-        most highly: <a href="https://ciechanow.ski/exposing-floating-point/">
-          https://ciechanow.ski/exposing-floating-point/</a>.</p>
+      <dd>
+        <p>
+          Bartosz Ciechanowski has developed an extremely well-done tool for visualizing how
+          IEEE-754 floating-point numbers are encoded. I recommend it most highly. There is a
+          tutorial with reference material at:
+          <a href="https://ciechanow.ski/exposing-floating-point/">
+          https://ciechanow.ski/exposing-floating-point/</a>.
+        </p>
+        <p>
+          And be sure to use the link to the actual tool (<a href="https://float.exposed">
+          https://float.exposed</a> that’s in the first paragraph.)
+        </p>
       </dd>
       <dt>What happened to the old IEEE-754 “calculators” and reference material?</dt>
       <dd>
