--- a/faq.html
+++ b/faq.html
@@ -31,7 +31,7 @@
         </p>
         <p>
           And be sure to use the link to the actual tool (<a href="https://float.exposed">
-          https://float.exposed</a> that’s in the first paragraph.)
+          https://float.exposed</a>) that’s in the first paragraph.
         </p>
       </dd>
       <dt>What happened to the old IEEE-754 “calculators” and reference material?</dt>
