--- a/faq.html
+++ b/faq.html
@@ -30,8 +30,8 @@
           https://ciechanow.ski/exposing-floating-point/</a>.
         </p>
         <p>
-          And be sure to use the link to the actual tool (<a href="https://float.exposed">
-          https://float.exposed</a>) that’s in the first paragraph.
+          And be sure to use the link to the actual tool <a href="https://float.exposed">
+          (https://float.exposed)</a> that’s in the first paragraph.
         </p>
       </dd>
       <dt>What happened to the old IEEE-754 “calculators” and reference material?</dt>
