--- a/IEEE-754.old/index.html
+++ b/IEEE-754.old/index.html
@@ -35,7 +35,7 @@
     <div id="content">
       <h2>This page has been replaced</h2>
       <div>
-        The replacement page is <a href="../IEEE-754/index.html">IEEE-754 Analyzer</a>
+        The replacement page is <a href="../index.html">IEEE-754 Analyzer</a>
       </div>
       <h2>What&rsquo;s Here</h2>
       <ul>
