--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </p>
             <p>
               In Auto mode, the analyzers will also accept the following “values” as inputs:
-              <code>NaN, qNaN, sNan, Infinity, +Infinity, </code>and<code> -Infinity</code>.
+              <code>NaN, qNaN, sNaN, Infinity, +Infinity, </code>and<code> -Infinity</code>.
             </p>
           </li>
           <li>
